ingress-prod.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: delivery-management-route-integration-api-ingress
  namespace: delivery-management
  annotations:
    kubernetes.io/ingress.class: nginx-management
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - routeintegrationapi.satrack.com
    secretName: delivery-management
  rules:
  - host: routeintegrationapi.satrack.com
    http:
      paths:
      - backend:
            serviceName: delivery-management-route-integration-api
            servicePort: 80
        path: /(.*)
